grafana-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-server-ingress
  namespace: istio-system
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.gdixon.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  tls:
  - hosts:
    - grafana.gdixon.io
    secretName: wildcard-cert
